Done for the night

--- a/src/templates/base.html.jinja
+++ b/src/templates/base.html.jinja
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
+      <meta charset="en-US"/>
 	{% block head %}
 	<title>{% block title %}{% endblock %}</title>
 	{% endblock %}
